feat: Refactor and reformat framework